# footy-sim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: shader.h  team.h  vao.h  vbo.h
src/: default.frag  ebo.cpp  main.cpp  shader.cpp  simulation.cpp  team.cpp  vao.cpp  vbo.cpp
